--- a/SnowballCallendar/src/main/webapp/resources/css/main.css
+++ b/SnowballCallendar/src/main/webapp/resources/css/main.css
@@ -2,7 +2,7 @@
         margin:0px;
         padding:0px;
         height:100%;
-        overflow:hidden;
+        overflow-u: scroll;
     }
  
     .page {
