--- a/SnowballCallendar/src/main/webapp/resources/css/main.css
+++ b/SnowballCallendar/src/main/webapp/resources/css/main.css
@@ -57,7 +57,7 @@
     .footer {
         clear:both;
         position:relative;
-        bottom:0;
+        bottom:10px;
         left:0;
         width:100%;
         height:20px;
